2006-05-01  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditPersonRef.py (EditPersonRef._select_person): fix
	call to SelectPerson
	* src/DataViews/_PersonView.py (PersonView.define_actions): add
	expand and collapse all node menu entries

2006-05-01  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py (find_backlink_handles): Correctly
	loop over all primary classes looking for a given handle.
	* src/RelLib/_Source.py (serialize, unserialize): properly save
	and restore marker.
	* src/RelLib/_MediaObject.py (serialize, unserialize): properly
	save and restore marker.
	* src/RelLib/_Place.py (serialize, unserialize): properly save and
	restore marker.
	* src/RelLib/_Repository.py (serialize, unserialize): properly
	save and restore marker.
	* src/RelLib/_Event.py (serialize, unserialize): properly save and
	restore marker.
	* various: merge changes from gramps20.

2006-04-30  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Verify.py (Verify.run_tool): Typo.
	
2006-04-30  Don Allingham  <don@gramps-project.org>
	* src/DataViews.py/_PersonView.py: don't add handles of top level
	objects
	* src/GrampsWidgets.py: handle both types and tuples

2006-04-30  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/CountAncestors.py: Use positive numbers for generations to be 
	  consistent with the rest of GRAMPS

2006-04-30  Don Allingham  <don@gramps-project.org>
	* src/RelLib/_Person.py: prevent duplicate entries in family lists

2006-04-29  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py: fix Select Person calls
	* src/docgen/Makefile.am: add ODSDoc.py
	* po/POTFILES.in: add ODSDoc.py
	* src/NEWS: Updated for 2.1.0 release

2006-04-29  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/CountAncestors.py: Add percent of theoretical ancestors

2006-04-28  Don Allingham  <don@gramps-project.org>
	* src/AddMedia.py: assign handle to notes

2006-04-28  Brian Matherly  <brian@gramps-project.org>