@@ -16,6 +16,18 @@
       </schema>
 
       <schema>
+        <key>/schemas/apps/gramps/preferences/last-view</key>
+        <applyto>/apps/gramps/preferences/last-view</applyto>
+        <owner>gramps</owner>
+        <type>int</type>
+        <default>0</default>
+        <locale name="C">
+          <short>Last view displayed</short>
+          <long>Indicates the last view displayed. This view will be displayed when the system is restarted.</long>
+        </locale>
+      </schema>
+
+      <schema>
         <key>/schemas/apps/gramps/preferences/family-siblings</key>
         <applyto>/apps/gramps/preferences/family-siblings</applyto>
         <owner>gramps</owner>
